@@ -57,6 +57,15 @@ public class LevelReader_1_19 extends BaseLevelReader<BlockPos, Vec3, BlockState
         );
     }
 
+    @Override
+    public List<String> getBiomeTagIDs(BlockPos blockPos) {
+        assert mc.level != null;
+        return mc.level.getBiome(blockPos)
+                .tags()
+                .map(tag -> tag.location().toString())
+                .toList();
+    }
+
 
     @Override
     public int getTime() {
