@@ -19,6 +19,7 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.core.BlockPos;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundSource;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.api.distmarker.Dist;
@@ -48,14 +49,15 @@ public class AmbienceMini extends BaseAmbienceMini
     public static ClientConfig clientConfig;
     public static KeyBindings keyBindings;
 
-    // Music
+    // State
     public static PlayerReader_1_20 playerReader;
     public static LevelReader_1_20 levelReader;
-
     public static ScreenMonitor screenMonitor;
     public static CombatMonitor combatMonitor;
     public static CaveDetector<BlockPos, Vec3, BlockState> caveDetector;
+    public static GameStateProviderV1<BlockPos, Vec3, BlockState, Entity> gameStateProvider;
 
+    // Music
     public static AmbienceThread ambienceThread;
 
 
@@ -90,6 +92,10 @@ public class AmbienceMini extends BaseAmbienceMini
         combatMonitor = new CombatMonitor(clientConfig, playerReader, levelReader);
         caveDetector = new CaveDetector<>(clientConfig);
 
+        gameStateProvider = new GameStateProviderV1<>(
+                clientConfig, playerReader, levelReader, screenMonitor, combatMonitor, caveDetector
+        );
+
         VolumeMonitor.init(
                 clientConfig,
                 Minecraft.getInstance().options.getSoundSourceVolume(SoundSource.MASTER),
@@ -106,9 +112,6 @@ public class AmbienceMini extends BaseAmbienceMini
             ambienceThread.kill();
 
         combatMonitor.clearCombatants();
-        var gameStateProvider = new GameStateProviderV1<>(
-                clientConfig, playerReader, levelReader, screenMonitor, combatMonitor, caveDetector
-        );
 
         MusicLoader.loadFrom(Common.AMBIENCE_DIRECTORY, LOGGER, gameStateProvider).ifPresent(rule -> {
             disableNativeMusicManager();
